@@ -86,7 +86,35 @@ DECL|method|MatchAllDocsQuery
 specifier|public
 name|MatchAllDocsQuery
 parameter_list|()
-block|{   }
+block|{
+name|this
+argument_list|(
+literal|null
+argument_list|)
+expr_stmt|;
+block|}
+DECL|field|normsField
+specifier|private
+specifier|final
+name|String
+name|normsField
+decl_stmt|;
+comment|/**    * @param normsField Field used for normalization factor (document boost). Null if nothing.    */
+DECL|method|MatchAllDocsQuery
+specifier|public
+name|MatchAllDocsQuery
+parameter_list|(
+name|String
+name|normsField
+parameter_list|)
+block|{
+name|this
+operator|.
+name|normsField
+operator|=
+name|normsField
+expr_stmt|;
+block|}
 DECL|class|MatchAllScorer
 specifier|private
 class|class
@@ -104,6 +132,12 @@ specifier|final
 name|float
 name|score
 decl_stmt|;
+DECL|field|norms
+specifier|final
+name|byte
+index|[]
+name|norms
+decl_stmt|;
 DECL|method|MatchAllScorer
 name|MatchAllScorer
 parameter_list|(
@@ -115,6 +149,10 @@ name|similarity
 parameter_list|,
 name|Weight
 name|w
+parameter_list|,
+name|byte
+index|[]
+name|norms
 parameter_list|)
 throws|throws
 name|IOException
@@ -141,6 +179,12 @@ name|w
 operator|.
 name|getValue
 argument_list|()
+expr_stmt|;
+name|this
+operator|.
+name|norms
+operator|=
+name|norms
 expr_stmt|;
 block|}
 DECL|method|explain
@@ -191,9 +235,35 @@ name|float
 name|score
 parameter_list|()
 block|{
+if|if
+condition|(
+name|norms
+operator|==
+literal|null
+condition|)
+block|{
 return|return
 name|score
 return|;
+block|}
+else|else
+block|{
+return|return
+name|score
+operator|*
+name|Similarity
+operator|.
+name|decodeNorm
+argument_list|(
+name|norms
+index|[
+name|doc
+argument_list|()
+index|]
+argument_list|)
+return|;
+comment|// normalize for field
+block|}
 block|}
 DECL|method|skipTo
 specifier|public
@@ -353,6 +423,19 @@ argument_list|,
 name|similarity
 argument_list|,
 name|this
+argument_list|,
+name|normsField
+operator|!=
+literal|null
+condition|?
+name|reader
+operator|.
+name|norms
+argument_list|(
+name|normsField
+argument_list|)
+else|:
+literal|null
 argument_list|)
 return|;
 block|}
