@@ -98,6 +98,19 @@ name|apache
 operator|.
 name|lucene
 operator|.
+name|index
+operator|.
+name|IndexReader
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
 name|store
 operator|.
 name|RAMDirectory
@@ -176,6 +189,8 @@ argument_list|(
 literal|"one"
 argument_list|,
 name|iw
+argument_list|,
+literal|1f
 argument_list|)
 expr_stmt|;
 name|addDoc
@@ -183,6 +198,8 @@ argument_list|(
 literal|"two"
 argument_list|,
 name|iw
+argument_list|,
+literal|20f
 argument_list|)
 expr_stmt|;
 name|addDoc
@@ -190,6 +207,8 @@ argument_list|(
 literal|"three four"
 argument_list|,
 name|iw
+argument_list|,
+literal|300f
 argument_list|)
 expr_stmt|;
 name|iw
@@ -197,19 +216,32 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
+name|IndexReader
+name|ir
+init|=
+name|IndexReader
+operator|.
+name|open
+argument_list|(
+name|dir
+argument_list|)
+decl_stmt|;
 name|IndexSearcher
 name|is
 init|=
 operator|new
 name|IndexSearcher
 argument_list|(
-name|dir
+name|ir
 argument_list|)
 decl_stmt|;
 name|ScoreDoc
 index|[]
 name|hits
-init|=
+decl_stmt|;
+comment|// assert with norms scoring turned off
+name|hits
+operator|=
 name|is
 operator|.
 name|search
@@ -224,7 +256,7 @@ literal|1000
 argument_list|)
 operator|.
 name|scoreDocs
-decl_stmt|;
+expr_stmt|;
 name|assertEquals
 argument_list|(
 literal|3
@@ -232,6 +264,282 @@ argument_list|,
 name|hits
 operator|.
 name|length
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"one"
+argument_list|,
+name|ir
+operator|.
+name|document
+argument_list|(
+name|hits
+index|[
+literal|0
+index|]
+operator|.
+name|doc
+argument_list|)
+operator|.
+name|get
+argument_list|(
+literal|"key"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"two"
+argument_list|,
+name|ir
+operator|.
+name|document
+argument_list|(
+name|hits
+index|[
+literal|1
+index|]
+operator|.
+name|doc
+argument_list|)
+operator|.
+name|get
+argument_list|(
+literal|"key"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"three four"
+argument_list|,
+name|ir
+operator|.
+name|document
+argument_list|(
+name|hits
+index|[
+literal|2
+index|]
+operator|.
+name|doc
+argument_list|)
+operator|.
+name|get
+argument_list|(
+literal|"key"
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// assert with norms scoring turned on
+name|MatchAllDocsQuery
+name|normsQuery
+init|=
+operator|new
+name|MatchAllDocsQuery
+argument_list|(
+literal|"key"
+argument_list|)
+decl_stmt|;
+name|hits
+operator|=
+name|is
+operator|.
+name|search
+argument_list|(
+name|normsQuery
+argument_list|,
+literal|null
+argument_list|,
+literal|1000
+argument_list|)
+operator|.
+name|scoreDocs
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|3
+argument_list|,
+name|hits
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"three four"
+argument_list|,
+name|ir
+operator|.
+name|document
+argument_list|(
+name|hits
+index|[
+literal|0
+index|]
+operator|.
+name|doc
+argument_list|)
+operator|.
+name|get
+argument_list|(
+literal|"key"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"two"
+argument_list|,
+name|ir
+operator|.
+name|document
+argument_list|(
+name|hits
+index|[
+literal|1
+index|]
+operator|.
+name|doc
+argument_list|)
+operator|.
+name|get
+argument_list|(
+literal|"key"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"one"
+argument_list|,
+name|ir
+operator|.
+name|document
+argument_list|(
+name|hits
+index|[
+literal|2
+index|]
+operator|.
+name|doc
+argument_list|)
+operator|.
+name|get
+argument_list|(
+literal|"key"
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// change norm& retest
+name|ir
+operator|.
+name|setNorm
+argument_list|(
+literal|0
+argument_list|,
+literal|"key"
+argument_list|,
+literal|400f
+argument_list|)
+expr_stmt|;
+name|normsQuery
+operator|=
+operator|new
+name|MatchAllDocsQuery
+argument_list|(
+literal|"key"
+argument_list|)
+expr_stmt|;
+name|hits
+operator|=
+name|is
+operator|.
+name|search
+argument_list|(
+name|normsQuery
+argument_list|,
+literal|null
+argument_list|,
+literal|1000
+argument_list|)
+operator|.
+name|scoreDocs
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|3
+argument_list|,
+name|hits
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"one"
+argument_list|,
+name|ir
+operator|.
+name|document
+argument_list|(
+name|hits
+index|[
+literal|0
+index|]
+operator|.
+name|doc
+argument_list|)
+operator|.
+name|get
+argument_list|(
+literal|"key"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"three four"
+argument_list|,
+name|ir
+operator|.
+name|document
+argument_list|(
+name|hits
+index|[
+literal|1
+index|]
+operator|.
+name|doc
+argument_list|)
+operator|.
+name|get
+argument_list|(
+literal|"key"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"two"
+argument_list|,
+name|ir
+operator|.
+name|document
+argument_list|(
+name|hits
+index|[
+literal|2
+index|]
+operator|.
+name|doc
+argument_list|)
+operator|.
+name|get
+argument_list|(
+literal|"key"
+argument_list|)
 argument_list|)
 expr_stmt|;
 comment|// some artificial queries to trigger the use of skipTo():
@@ -406,6 +714,16 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
+name|ir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
 block|}
 DECL|method|testEquals
 specifier|public
@@ -465,6 +783,9 @@ name|text
 parameter_list|,
 name|IndexWriter
 name|iw
+parameter_list|,
+name|float
+name|boost
 parameter_list|)
 throws|throws
 name|IOException
@@ -476,10 +797,9 @@ operator|new
 name|Document
 argument_list|()
 decl_stmt|;
-name|doc
-operator|.
-name|add
-argument_list|(
+name|Field
+name|f
+init|=
 operator|new
 name|Field
 argument_list|(
@@ -499,6 +819,19 @@ name|Index
 operator|.
 name|ANALYZED
 argument_list|)
+decl_stmt|;
+name|f
+operator|.
+name|setBoost
+argument_list|(
+name|boost
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+name|f
 argument_list|)
 expr_stmt|;
 name|iw
